syntax = "proto2";

import "TSPMessages.proto";
import "TSKArchives.proto";
import "TSCKArchives.proto";
import "TSCHArchives.proto";
import "TSCEArchives.proto";
import "TSSArchives.proto";
import "TSDArchives.proto";
import "TSWPArchives.proto";
import "TSAArchives.proto";
import "TSTArchives.proto";
package TN;

enum PageOrder {
  PageOrderTopToBottom = 0;
  PageOrderLeftToRight = 1;
}
enum PageLayoutDirection {
  PageLayoutDirectionLeftToRight = 0;
  PageLayoutDirectionRightToLeft = 1;
}
message SheetUIStateArchive {
  required float view_scale = 1;
  required .TSP.Point scroll_position = 2;
  optional float previous_view_scale = 3;
  optional bool scroll_position_is_unscaled = 4;
  optional .TSP.Point previous_scroll_position = 5;
  optional bool scroll_position_valid = 6;
  optional bool previous_scroll_position_valid = 7;
  optional .TSP.Size visible_size = 8;
  optional .TSP.Size previous_visible_size = 9;
  optional uint32 device_idiom = 10;
  optional .TSK.SelectionPathArchive selection_path = 11;
  optional .TSP.Reference selection_path_transformer = 12;
}

message SheetUIStateDictionaryEntryArchive {
  required .TSP.Reference sheet = 1;
  required .TN.SheetUIStateArchive sheet_uistate = 2;
}

message UUIDSheetUIStateDictionaryArchive {
  required .TSP.UUID sheet_uuid = 1;
  required .TN.SheetUIStateArchive sheet_uistate = 2;
}

message UIStateArchive {
  enum InspectorPaneViewMode {
    kInspectorPaneViewModeFormat = 0;
    kInspectorPaneViewModeFilter = 1;
  }
  required uint32 active_sheet_index = 1 [deprecated = true];
  repeated .TSP.Reference selected_info = 2 [deprecated = true];
  repeated .TN.SheetUIStateDictionaryEntryArchive sheet_uistate_dictionary_entry = 3 [deprecated = true];
  optional .TST.SelectionArchive table_selection = 4 [deprecated = true];
  optional uint32 editing_sheet_index = 5 [deprecated = true];
  optional int32 document_mode = 6;
  repeated .TN.SheetUIStateDictionaryEntryArchive edit_mode_sheet_uistate_dictionary_entry = 7 [deprecated = true];
  optional int32 table_editing_mode = 8 [deprecated = true];
  optional uint32 form_focused_record_index = 9 [deprecated = true];
  optional uint32 form_focused_field_index = 10 [deprecated = true];
  optional bool in_chart_mode = 11;
  optional .TN.ChartSelectionArchive chart_selection = 12 [deprecated = true];
  optional .TSP.Reference sheet_selection = 13 [deprecated = true];
  optional bool inspector_pane_visible = 14 [default = true];
  optional .TN.UIStateArchive.InspectorPaneViewMode inspector_pane_view_mode = 15 [default = kInspectorPaneViewModeFormat];
  repeated uint32 selected_quick_calc_functions = 16;
  optional bool removed_all_quick_calc_functions = 17;
  optional bool show_canvas_guides = 18;
  optional bool shows_comments = 19;
  optional .TSP.Point desktop_window_origin = 20;
  optional .TSP.Size desktop_window_size = 21;
  optional .TSP.Size desktop_screen_size = 22;
  repeated .TSCH.ChartUIState chart_ui_state = 23;
  optional .TSK.SelectionPathArchive selection_path = 24;
  optional bool inspector_pane_autohidden = 25;
  optional bool shows_sidebar = 26 [deprecated = true];
  optional bool shows_rulers = 27;
  repeated .TN.UUIDSheetUIStateDictionaryArchive uuid_sheet_uistate_dictionary = 28;
  optional .TSP.Reference freehand_drawing_toolkit_state = 29;
  optional .TSP.Reference selection_path_transformer = 30;
  optional bool editing_disabled = 31;
  optional bool sidebar_visible = 32;
  optional float sidebar_width = 33;
}

message SheetSelectionArchive {
  optional .TSP.Reference sheet = 1;
  optional bool paginated = 2;
}

message FormSelectionArchive {
  required uint32 record_index = 1;
  required uint32 field_index = 2;
}

message FormBuilderSelectionArchive {
  optional uint32 viewing_record_index = 1;
}

message FormTableChooserSelectionArchive {
}

message UndoRedoStateArchive {
  required .TN.UIStateArchive ui_state = 1;
}

message DocumentArchive {
  repeated .TSP.Reference sheets = 1;
  required .TSA.DocumentArchive super = 8;
  optional .TSP.Reference calculation_engine = 3 [deprecated = true];
  required .TSP.Reference stylesheet = 4;
  required .TSP.Reference sidebar_order = 5;
  required .TSP.Reference theme = 6;
  optional .TN.UIStateArchive uistate = 7;
  optional .TSP.Reference custom_format_list = 9;
  optional string printer_id = 10 [deprecated = true];
  optional string paper_id = 11;
  optional .TSP.Size page_size = 12;
}

message PlaceholderArchive {
  required .TSWP.ShapeInfoArchive super = 1;
}

message SheetArchive {
  required string name = 1;
  repeated .TSP.Reference drawable_infos = 2;
  optional bool in_portrait_page_orientation = 3;
  optional bool show_repeating_headers = 4 [deprecated = true];
  optional bool show_page_numbers = 5;
  optional bool is_autofit_on = 6;
  optional float content_scale = 7;
  optional .TN.PageOrder page_order = 8;
  optional .TSD.EdgeInsetsArchive print_margins = 10;
  optional bool using_start_page_number = 11;
  optional int32 start_page_number = 12;
  optional float page_header_inset = 13;
  optional float page_footer_inset = 14;
  optional .TSP.Reference header_storage = 15 [deprecated = true];
  optional .TSP.Reference footer_storage = 16 [deprecated = true];
  optional .TSP.Reference userDefinedGuideStorage = 17;
  repeated .TSP.Reference headers = 18;
  repeated .TSP.Reference footers = 19;
  optional bool uses_single_header_footer = 20;
  optional .TN.PageLayoutDirection layout_direction = 21 [default = PageLayoutDirectionLeftToRight];
  optional .TSP.Reference style = 22;
  optional bool print_backgrounds = 23;
  optional bool should_print_comments = 24;
}

message SheetStylePropertiesArchive {
  optional .TSD.FillArchive fill = 1;
}

message SheetStyleArchive {
  required .TSS.StyleArchive super = 1;
  optional uint32 override_count = 2;
  optional .TN.SheetStylePropertiesArchive sheet_properties = 3;
}

message FormBasedSheetArchive {
  required .TN.SheetArchive super = 1;
  optional .TSP.CFUUIDArchive table_id = 2;
}

message ThemeArchive {
  required .TSS.ThemeArchive super = 1;
  repeated .TSP.Reference prototypes = 2;
}

message PasteboardNativeStorageArchive {
  optional .TSP.Reference sheet = 1;
  optional .TN.SheetUIStateArchive ui_state = 2;
}

message ChartMediatorFormulaStorage {
  repeated .TSCE.FormulaArchive data_formulae = 1;
  repeated .TSCE.FormulaArchive row_label_formulae = 3;
  repeated .TSCE.FormulaArchive col_label_formulae = 4;
  optional int32 direction = 5;
  repeated .TSCE.FormulaArchive error_custom_pos_formulae = 6;
  repeated .TSCE.FormulaArchive error_custom_neg_formulae = 7;
  repeated .TSCE.FormulaArchive error_custom_pos_scatterX_formulae = 8;
  repeated .TSCE.FormulaArchive error_custom_neg_scatterX_formulae = 9;
  optional int32 scheme = 10;
}

message ChartMediatorArchive {
  required .TSCH.ChartMediatorArchive super = 1;
  required string entity_id = 2;
  optional .TN.ChartMediatorFormulaStorage formulas = 3;
  optional bool columns_are_series = 4;
  optional bool is_registered_with_calc_engine = 5 [deprecated = true];
}

message ChartSelectionArchive {
  optional .TSCE.RangeReferenceArchive reference = 1;
  optional .TSCH.ChartSelectionArchive deprecated_super = 2 [deprecated = true];
  optional .TSP.Reference chart = 3;
  optional .TSD.DrawableSelectionArchive super = 4;
}

message FormCommandActivityBehaviorArchive {
  required .TSCK.CommandActivityBehaviorArchive super = 1;
}
